add new pages for create/join game

--- a/ui/index.html
+++ b/ui/index.html
@@ -33,11 +33,7 @@
     </script>
   </head>
   <body>
-    <h1 id="question-title"></h1>
-    <input id="answer" type="text" />
-    <button id="submit">Submit</button>
-    <script>
-      document.getElementById("submit").addEventListener("click", submit)
-    </script>
+    <a href="create-game.html">Create Game</button>
+    <a href="join-game.html">Join Game</button>
   </body>
 </html>
